# Dev_USB

./: CMakeLists.txt  CMakeSettings.json  CMakeSettings_beagle.json  CMakeSettings_win.json  MyGlobalImports.cmake  README.md
CommonLib/: procoSerialSettings.cpp  procoTcpSettings.cpp  procoUdpSettings.cpp  someUSBHostParms.cpp  someUSBHostParms.h
ProtoSerial/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  procoSerialThread.cpp  procoSerialThread.h
cdhdemulator/: MainInit.cpp  someEmulatorThread.cpp  someEmulatorThread.h
motorcon/: CMakeLists.txt  CmdLineExec.cpp  Main.cpp  MainInit.cpp  moconMotorParms.cpp  moconMotorParms.h  moconUsbCom.cpp  moconUsbCom.h  moconUsbThread.cpp  moconUsbThread.h
serialecho/: CMakeLists.txt  CmdLineExec.cpp  EchoThread.cpp  EchoThread.h  GadgetThread.cpp  GadgetThread.h  HidrawThread.cpp  HidrawThread.h  KbdDefs.h  KbdTransform.cpp  KbdTransform.h  Main.cpp  MainInit.cpp
serialmaster/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  MasterThread.cpp  MasterThread.h
serialslave/: CmdLineExec.h  MainInit.cpp  SlaveThread.cpp  SlaveThread.h
testlibusb/: CMakeLists.txt  testlibusb.cpp
usbmaster/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  MasterThread.cpp  MasterThread.h
